--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,36 +6,54 @@ services:
     build: .
     container_name: analytics-backend
     restart: always
+    working_dir: /app
+    volumes:
+      - .:/app
     ports:
       - "8000:8000"
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
       CELERY_BACKEND: rpc://
-      CLICKHOUSE_HOST: clickhouse
-      CLICKHOUSE_PORT: 8123
+
+      # CLICKHOUSE CLOUD
+      CLICKHOUSE_HOST: zvx41wbk0r.asia-northeast1.gcp.clickhouse.cloud
+      CLICKHOUSE_PORT: 8443
       CLICKHOUSE_USER: default
-      CLICKHOUSE_PASSWORD: ""
+      CLICKHOUSE_PASSWORD: "w3uqO75Wq_29r"
+      CLICKHOUSE_SECURE: "true"
+
     depends_on:
-      clickhouse:
-        condition: service_healthy
       rabbitmq:
         condition: service_started
+
+    command: >
+      sh -c "
+        python backend/db/database.py &&
+        python backend/db/aggregation_init.py &&
+        uvicorn backend.main:app --host 0.0.0.0 --port 8000
+      "
 
   worker:
     build: .
     container_name: analytics-worker
-    command: celery -A backend.celery_app.celery worker --loglevel=info
     restart: always
+    working_dir: /app
+    volumes:
+      - .:/app
+    command: celery -A backend.celery_app.celery worker --loglevel=info
+
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
       CELERY_BACKEND: rpc://
-      CLICKHOUSE_HOST: clickhouse
-      CLICKHOUSE_PORT: 8123
+
+      # CLICKHOUSE CLOUD
+      CLICKHOUSE_HOST: zvx41wbk0r.asia-northeast1.gcp.clickhouse.cloud
+      CLICKHOUSE_PORT: 8443
       CLICKHOUSE_USER: default
-      CLICKHOUSE_PASSWORD: ""
+      CLICKHOUSE_PASSWORD: "w3uqO75Wq_29r"
+      CLICKHOUSE_SECURE: "true"
+
     depends_on:
-      clickhouse:
-        condition: service_healthy
       rabbitmq:
         condition: service_started
 
@@ -50,24 +68,24 @@ services:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
 
-  clickhouse:
-    image: clickhouse/clickhouse-server
-    container_name: clickhouse
+  superset:
+    container_name: superset
+    build:
+      context: ./superset
     restart: always
     ports:
-      - "8123:8123"    # HTTP interface
-      - "9000:9000"    # Native TCP interface
+      - "8088:8088"
     environment:
-      CLICKHOUSE_USER: default
-      CLICKHOUSE_PASSWORD: ""
-      CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
-    ulimits:
-      nofile:
-        soft: 262144
-        hard: 262144
-    healthcheck:
-      test: ["CMD", "clickhouse-client", "--query", "SELECT 1"]
-      interval: 5s
-      timeout: 3s
-      retries: 20
-      start_period: 10s
+      SUPERSET_ENV: production
+      SUPERSET_CONFIG_PATH: /app/superset_config.py
+    volumes:
+      - ./superset_config.py:/app/superset_config.py
+      - superset_data:/app/superset_home
+
+    # Superset does NOT depend on local ClickHouse (Cloud only)
+    depends_on:
+      rabbitmq:
+        condition: service_started
+
+volumes:
+  superset_data:
