--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-
-#docker file superset 
-
 version: "3.9"
 
 services:
@@ -11,6 +8,9 @@ services:
     restart: always
     ports:
       - "8000:8000"
+    volumes:
+      - ./frontend:/app/frontend            # 🔥 Mount frontend folder
+      - ./backend:/app/backend              # (optional but recommended)
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
       CELERY_BACKEND: rpc://
@@ -35,6 +35,8 @@ services:
     container_name: analytics-worker
     restart: always
     command: celery -A backend.celery_app.celery worker --loglevel=info
+    volumes:
+      - ./backend:/app/backend              # optional but recommended
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
       CELERY_BACKEND: rpc://
