--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
 
   backend:
@@ -9,8 +7,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./frontend:/app/frontend            # 🔥 Mount frontend folder
-      - ./backend:/app/backend              # (optional but recommended)
+      - ./frontend:/app/frontend
+      - ./backend:/app/backend
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
       CELERY_BACKEND: rpc://
@@ -36,7 +34,7 @@ services:
     restart: always
     command: celery -A backend.celery_app.celery worker --loglevel=info
     volumes:
-      - ./backend:/app/backend              # optional but recommended
+      - ./backend:/app/backend
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
       CELERY_BACKEND: rpc://
@@ -92,13 +90,12 @@ services:
       - "8088:8088"
     environment:
       SUPERSET_ENV: production
-      SUPERSET_CONFIG_PATH: /app/superset_config.py
+      SUPERSET_CONFIG_PATH: /app/pythonpath/superset_config.py
     volumes:
-      - ./superset_config.py:/app/superset_config.py
-      - superset_data:/app/superset_home
+      - rabbitmq-based-analytics_superset_db_data:/app/superset_home
     depends_on:
       clickhouse:
         condition: service_healthy
 
 volumes:
-  superset_data:
+  rabbitmq-based-analytics_superset_db_data:
